Fixed bug that caused contact image to stretch to 100% width in build version.

--- a/src/components/Home/Contact/Contact.css
+++ b/src/components/Home/Contact/Contact.css
@@ -40,7 +40,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
+  /* width: 100%; */
   /* height: 100vh; */
   position: relative;
 }
